# sudo-win32-extras

./: MANIFEST.in  README.md  pyproject.toml  requirements.testing.txt  setup.py
src/sudo_win32_extras/: cli.py
tests/: test_cli.py
